--- a/sass/components/_toggle-btn.scss
+++ b/sass/components/_toggle-btn.scss
@@ -2,7 +2,6 @@
     display: flex;
     column-gap: 2.4rem;
     justify-content: center;
-    margin-bottom: 6.45rem;
 }
 
 .switch {
